Re-engineered the java and unit test cases for better readability and code coverage.